--- a/Service/packages.config
+++ b/Service/packages.config
@@ -3,4 +3,6 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="MySql.Data" version="6.10.7" targetFramework="net452" />
   <package id="MySql.Data.Entity" version="6.10.7" targetFramework="net452" />
+  <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net452" />
+  <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net452" />
 </packages>
