--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -231,11 +231,15 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\EmployeController.cs" />
+    <Compile Include="Controllers\EvaluationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\testController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201911241219033_claim.cs" />
+    <Compile Include="Migrations\201911241219033_claim.Designer.cs">
+      <DependentUpon>201911241219033_claim.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -365,6 +369,8 @@
     <Content Include="Views\Employe\Index.cshtml" />
     <Content Include="Views\Shared\_myLayout.cshtml" />
     <Content Include="Views\test\Index.cshtml" />
+    <Content Include="Views\Evaluation\IndexEval.cshtml" />
+    <Content Include="Views\Evaluation\CreateEval.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -390,6 +396,11 @@
       <Project>{e0e30561-82de-4253-965a-e4951a9f28bb}</Project>
       <Name>Service</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201911241219033_claim.resx">
+      <DependentUpon>201911241219033_claim.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
