--- a/Web/Web.config
+++ b/Web/Web.config
@@ -10,6 +10,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Web-20191121030830.mdf;Initial Catalog=aspnet-Web-20191121030830;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="AdvyteamContext" connectionString="server=localhost;user id=root;password=belgacem;database=pidev;persistsecurityinfo=True" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
