--- a/Data/App.config
+++ b/Data/App.config
@@ -15,5 +15,7 @@
       <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.10.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
     </providers>
   </entityFramework>
-  
-<connectionStrings><add name="AdvyteamContext" connectionString="server=localhost;user id=root;password=belgacem;database=pidev;persistsecurityinfo=True" providerName="MySql.Data.MySqlClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    
+  <add name="AdvyteamContext" connectionString="server=localhost;user id=root;password=belgacem;persistsecurityinfo=True;database=pidev" providerName="MySql.Data.MySqlClient" /></connectionStrings>
+</configuration>
