--- a/Data/packages.config
+++ b/Data/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="EntityFramework.fr" version="6.2.0" targetFramework="net452" />
   <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net452" />
   <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net452" />
 </packages>
