--- a/Web/Web.config
+++ b/Web/Web.config
@@ -95,4 +95,12 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+<system.net>
+    <mailSettings>
+        <smtp>
+            <network host="smtp.gmail.com" port="	587" enableSsl="true" />
+        </smtp>
+     </mailSettings>
+</system.net>
+
 </configuration>
