--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -231,6 +231,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ClaimController.cs" />
+    <Compile Include="Controllers\ClaimManagerController.cs" />
     <Compile Include="Controllers\EmployeController.cs" />
     <Compile Include="Controllers\EvaluationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -330,7 +331,9 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -372,6 +375,9 @@
     <Content Include="Views\Claim\Create.cshtml" />
     <Content Include="Views\Claim\Edit.cshtml" />
     <Content Include="Views\Claim\Index.cshtml" />
+    <Content Include="Views\ClaimManager\Index.cshtml" />
+    <Content Include="Views\ClaimManager\Edit.cshtml" />
+    <Content Include="Views\Claim\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -385,6 +391,10 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Data\Data.csproj">
+      <Project>{ED48489A-2279-4A85-82A2-0DBE9DF0AF81}</Project>
+      <Name>Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Domain\Domain.csproj">
       <Project>{daef5fd3-64bf-424a-99c9-c111e4f2c9f1}</Project>
       <Name>Domain</Name>
