Iheb EL Yousfi coomit 2 ..

--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -72,11 +72,13 @@
     <Compile Include="Entities\conge.cs" />
     <Compile Include="Entities\equipe.cs" />
     <Compile Include="Entities\evaluation.cs" />
+    <Compile Include="Entities\feedback.cs" />
     <Compile Include="Entities\formateur.cs" />
     <Compile Include="Entities\formation.cs" />
     <Compile Include="Entities\mission.cs" />
     <Compile Include="Entities\project.cs" />
     <Compile Include="Entities\publication.cs" />
+    <Compile Include="Entities\reactp.cs" />
     <Compile Include="Entities\report.cs" />
     <Compile Include="Entities\task.cs" />
     <Compile Include="Entities\user.cs" />
