--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -66,7 +66,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="FeedbackService.cs" />
+    <Compile Include="IFeedbackService.cs" />
+    <Compile Include="ILikeService.cs" />
     <Compile Include="IPublicationService.cs" />
+    <Compile Include="LikeService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublicationService.cs" />
   </ItemGroup>
