--- a/Data/App.config
+++ b/Data/App.config
@@ -16,4 +16,4 @@
     </providers>
   </entityFramework>
   
-<connectionStrings><add name="AdvyteamContext" connectionString="server=localhost;user id=root;password=belgacem;database=pidev;persistsecurityinfo=True" providerName="MySql.Data.MySqlClient" /></connectionStrings></configuration>
+<connectionStrings><add name="AdvyteamContext"  connectionString="server=localhost;user id=root;database=pidev" providerName="MySql.Data.MySqlClient" /></connectionStrings></configuration>
