--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -66,7 +66,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="IMissionService.cs" />
+    <Compile Include="IParticipationService.cs" />
+    <Compile Include="IReportService.cs" />
+    <Compile Include="MissionService.cs" />
+    <Compile Include="ParticipationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj">
